remove default and add tunnel

--- a/nginx.conf
+++ b/nginx.conf
@@ -36,25 +36,25 @@ http {
     include /etc/nginx/conf.d/*.conf;
 
     server {
-        listen       80 default_server;
-        listen       [::]:80 default_server;
-        server_name  _;
-        root         /usr/share/nginx/html;
+	    server_name _;
 
-        # Load configuration files for the default server block.
-        include /etc/nginx/default.d/*.conf;
+	    access_log /var/log/nginx/$host;
 
-        location / {
-        }
+	    location / {
+		    proxy_pass http://localhost:3333/;
+		    proxy_set_header X-Real-IP $remote_addr;
+		    proxy_set_header Host $host;
+		    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header X-Forwarded-Proto https;
+		    proxy_redirect off;
+	    }
 
-        error_page 404 /404.html;
-            location = /40x.html {
-        }
-
-        error_page 500 502 503 504 /50x.html;
-            location = /50x.html {
-        }
+	    error_page 502 /50x.html;
+	    location = /50x.html {
+		    root /usr/share/nginx/html;
+	    }
     }
+
 
 # Settings for a TLS enabled server.
 #
