--- a/nginx.conf
+++ b/nginx.conf
@@ -36,55 +36,29 @@ http {
     include /etc/nginx/conf.d/*.conf;
 
     server {
-        listen       80 default_server;
-        listen       [::]:80 default_server;
-        server_name  _;
-        root         /usr/share/nginx/html;
+        server_name base.org.es www.base.org.es;
+	access_log /var/log/nginx/$host;
 
-        # Load configuration files for the default server block.
-        include /etc/nginx/default.d/*.conf;
+    	# These three lines are new.
+	listen 443 ssl;
+	ssl_certificate /etc/letsencrypt/live/base.org.es/fullchain.pem;
+	ssl_certificate_key /etc/letsencrypt/live/base.org.es/privkey.pem;
 
         location / {
+		proxy_pass http://localhost:3333/;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header Host $host;
+	    	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+	    	proxy_set_header X-Forwarded-Proto https;
+		proxy_redirect off;
         }
-
-        error_page 404 /404.html;
-            location = /40x.html {
-        }
-
-        error_page 500 502 503 504 /50x.html;
-            location = /50x.html {
-        }
+    	error_page 502 /50x.html;
+		location = /usr/share/nginx/html/502.html
+    	error_page /50x.html;
+		location = /50x.html {
+		    root /usr/share/nginx/html;
+		}
     }
-
-# Settings for a TLS enabled server.
-#
-#    server {
-#        listen       443 ssl http2 default_server;
-#        listen       [::]:443 ssl http2 default_server;
-#        server_name  _;
-#        root         /usr/share/nginx/html;
-#
-#        ssl_certificate "/etc/pki/nginx/server.crt";
-#        ssl_certificate_key "/etc/pki/nginx/private/server.key";
-#        ssl_session_cache shared:SSL:1m;
-#        ssl_session_timeout  10m;
-#        ssl_ciphers PROFILE=SYSTEM;
-#        ssl_prefer_server_ciphers on;
-#
-#        # Load configuration files for the default server block.
-#        include /etc/nginx/default.d/*.conf;
-#
-#        location / {
-#        }
-#
-#        error_page 404 /404.html;
-#            location = /40x.html {
-#        }
-#
-#        error_page 500 502 503 504 /50x.html;
-#            location = /50x.html {
-#        }
-#    }
 
 }
 
