--- a/nginx.conf
+++ b/nginx.conf
@@ -34,6 +34,15 @@ http {
     # See http://nginx.org/en/docs/ngx_core_module.html#include
     # for more information.
     include /etc/nginx/conf.d/*.conf;
+    server {
+	listen 80;
+	listen [::]:80; # Listen on IPv6 as well
+	server_name base.org.es www.base.org.es;
+
+	# Redirect all HTTP requests to HTTPS
+	return 301 https://$host$request_uri;
+    }
+
 
     server {
         server_name base.org.es www.base.org.es;
@@ -45,19 +54,17 @@ http {
 	ssl_certificate_key /etc/letsencrypt/live/base.org.es/privkey.pem;
 
         location / {
-		proxy_pass http://localhost:3333/;
+		proxy_pass http://localhost:7575/;
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_set_header Host $host;
 	    	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 	    	proxy_set_header X-Forwarded-Proto https;
 		proxy_redirect off;
         }
-    	error_page 502 /50x.html;
-		location = /usr/share/nginx/html/502.html
-    	error_page /50x.html;
-		location = /50x.html {
-		    root /usr/share/nginx/html;
-		}
+	error_page 500 502 503 504 /50x.html;
+	    location = /50x.html {
+	    }
+
     }
 
 }
