--- a/nginx.conf
+++ b/nginx.conf
@@ -19,7 +19,7 @@ http {
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log  /var/log/nginx/access.log  main;
+    access_log  /var/log/nginx/access$host.log  main;
 
     sendfile            on;
     tcp_nopush          on;
@@ -43,6 +43,15 @@ http {
 	return 301 https://$host$request_uri;
     }
 
+    server {
+	listen 80;
+	listen [::]:80;
+	server_name uptime.base.org.es;
+
+	# Redirect all HTTP requests to HTTPS
+	return 301 https://$host$request_uri;
+    }
+
 
     server {
         server_name base.org.es www.base.org.es;
@@ -55,6 +64,35 @@ http {
 
         location / {
 		proxy_pass http://localhost:7575/;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header Host $host;
+	    	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+	    	proxy_set_header X-Forwarded-Proto https;
+		proxy_redirect off;
+
+		# WebSocket support:
+		proxy_http_version 1.1;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection "upgrade";
+        }
+	error_page 500 502 503 504 /50x.html;
+	    location = /50x.html {
+	    	root /usr/share/nginx/html;
+	    }
+
+    }
+
+    server {
+        server_name uptime.base.org.es;
+	access_log /var/log/nginx/uptime$host;
+
+    	# SSL configuration
+	listen 443 ssl;
+	ssl_certificate /etc/letsencrypt/live/base.org.es/fullchain.pem;
+	ssl_certificate_key /etc/letsencrypt/live/base.org.es/privkey.pem;
+
+        location / {
+		proxy_pass http://localhost:3001/;
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_set_header Host $host;
 	    	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
